# aio_stocks

./: .env.template  .gitignore  docker-compose.dev.yml  docker-compose.yml  requirements.txt  run_app.sh  start_app.sh
docker/: Dockerfile
docker/scripts/: entrypoint.sh  start_api.sh
golang/docker/: Dockerfile
golang/src/: app.go  go.mod  go.sum
python/: requirements.txt
python/docker/: Dockerfile
python/src/: db.py
python/src/api/: app.py
python/src/parsers/: run.py
python/src/parsers/moex/: constants.py  parser.py
python/src/parsers/moex/bonds/: constants.py  parser.py
python/src/parsers/moex/shares/: __init__.py  constants.py
python/src/settings/: __init__.py
rustlang/: Cargo.toml
rustlang/docker/: Dockerfile
rustlang/src/: main.rs
src/: db.py  gunicorn_conf.py
src/api/: app.py
src/parsers/: run.py
src/parsers/moex/bonds/: __init__.py  constants.py  parser.py
src/settings/: __init__.py  base.py  dev.py
